# lesepult

./: .gitignore  Makefile  README.md  index.html  package.json  vite.config.js
.github/workflows/: release-macos.yml  release-windows.yml  release.yml
scripts/: build-app.sh
src/: main.js  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  macos_export.m  main.rs
