[package]
name = "lesepult"
version = "0.4.0"
edition = "2021"

[lib]
name = "lesepult_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
raw-window-handle = "0.6"
arboard = "3"
