[package]
name = "lesepult"
version = "0.10.0"
edition = "2021"

[lib]
name = "lesepult_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
raw-window-handle = "0.6"
arboard = "3"
notify = "8"
notify-debouncer-full = "0.6"
